# kestrue

./: LICENSE  README.md  requirements-dev.txt  setup.cfg
src/kestrue/: combinators.py  naturals.py
tests/: test_combinators.py  test_naturals.py
