[metadata]
name = kestrue
version = 0.1
description = "Lambda calculus in Python"
long_description = file: README.md
long_description_content_type = text/markdown
author = Bruno Lange
author_email = blangeram@gmail.com
url = https://github.com/brunolange/kestrue
license = MIT
license_file = LICENSE

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
exclude =
    tests*